# circle-ci

./: .dockerignore  .gitignore  .pre-commit-config.yaml  pyproject.toml
.circleci/: config.yml
docker/: Dockerfile
src/: test_main.py
